images_DATA = \
	category_birthday_16.png \
	category_business_16.png \
	category_favorites_16.png \
	category_gifts_16.png \
	category_goals_16.png \
	category_holiday_16.png \
	category_holiday-cards_16.png \
	category_hot-contacts_16.png \
	category_ideas_16.png \
	category_international_16.png \
	category_key-customer_16.png \
	category_miscellaneous_16.png \
	category_personal_16.png \
	category_phonecalls_16.png \
	category_status_16.png \
	category_strategies_16.png \
	category_suppliers_16.png \
	category_time-and-expenses_16.png \
	$(NULL)

EXTRA_DIST = $(images_DATA)

-include $(top_srcdir)/git.mk
